# promis-preprocessing

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: organize_metadata.py  process_studies.py
src/promis_preprocess/: __init__.py  analysis_utils.py  config_loader.py  dicom_processing.py  metadata_extraction.py
src/promis_preprocess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
